--- a/TrafficGuard/Views/Shared/_Layout.cshtml
+++ b/TrafficGuard/Views/Shared/_Layout.cshtml
@@ -23,12 +23,25 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
 
-                        <li class="nav-item">
+                        @{
+                            if (this.User != default && this.User.Identity.IsAuthenticated)
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Accident" asp-action="Index">Accidents</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="City" asp-action="Index">Cities</a>
+                                </li>
+                            }
+                        }
+
+                        @*<li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Accident" asp-action="Index">Accidents</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="City" asp-action="Index">Cities</a>
-                        </li>
+                        </li>*@
+
 
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
