--- a/TrafficGuard/Views/Shared/_Pager.cshtml
+++ b/TrafficGuard/Views/Shared/_Pager.cshtml
@@ -2,29 +2,36 @@
 @using TrafficGuard.Services
 
 <div class="container">
-    @if (Model.TotalPages > 1)
+    @if (Model.TotalPages > 0)
     {
-        <li class="page-item">
-            <a class="page-link" asp-asp-controller="@PagerManager.ControllerType" asp-action="Index" asp-route-pg="1">First</a>
-        </li>
-        <li class="page-item">
-            <a class="page-link" asp-asp-controller="@PagerManager.ControllerType" asp-action="Index" 
-            asp-route-pg="@(Model.CurrentPage - 1)">Previous</a>
-        </li>
-    }
-    @for (int pge = Model.StartPage; pge <= Model.EndPage; pge++)
-    {
-        <li class="page-item @(pge == Model.CurrentPage ? "active" : "")">
-            <a class="page-link" asp-asp-controller="@PagerManager.ControllerType" asp-action="Index" asp-route-pg="@pge">@pge</a>
-        </li>
-    }
-    @if (Model.CurrentPage < Model.TotalPages)
-    {
-        <li class="page-item">
-            <a class="page-link" asp-asp-controller="@PagerManager.ControllerType" asp-action="Index" asp-route-pg="@(Model.CurrentPage + 1)">Next</a>
-        </li>
-        <li class="page-item">
-            <a class="page-link" asp-asp-controller="@PagerManager.ControllerType" asp-action="Index" asp-route-pg="@(Model.TotalPages)">Last</a>
-        </li>
+        <ul class="pagination justify-content-end">
+
+            @if (Model.TotalPages > 1)
+            {
+                <li class="page-item">
+                    <a class="page-link" asp-asp-controller="@PagerManager.ControllerType" asp-action="Index" asp-route-pg="1">First</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" asp-asp-controller="@PagerManager.ControllerType" asp-action="Index"
+                   asp-route-pg="@(Model.CurrentPage - 1)">Previous</a>
+                </li>
+            }
+            @for (int pge = Model.StartPage; pge <= Model.EndPage; pge++)
+            {
+                <li class="page-item @(pge == Model.CurrentPage ? "active" : "")">
+                    <a class="page-link" asp-asp-controller="@PagerManager.ControllerType" asp-action="Index" asp-route-pg="@pge">@pge</a>
+                </li>
+            }
+            @if (Model.CurrentPage < Model.TotalPages)
+            {
+                <li class="page-item">
+                    <a class="page-link" asp-asp-controller="@PagerManager.ControllerType" asp-action="Index" asp-route-pg="@(Model.CurrentPage + 1)">Next</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" asp-asp-controller="@PagerManager.ControllerType" asp-action="Index" asp-route-pg="@(Model.TotalPages)">Last</a>
+                </li>
+            }
+
+        </ul>
     }
 </div>
