--- a/TrafficGuard/Views/Shared/_Layout.cshtml
+++ b/TrafficGuard/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Accident" asp-action="Index">Accidents</a>
                                 </li>
                                 <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Location" asp-action="Index">Locations</a>
+                                </li>
+                                <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="District" asp-action="Index">Districts</a>
                                 </li>
                                 <li class="nav-item">
