--- a/TrafficGuard/Views/District/Create.cshtml
+++ b/TrafficGuard/Views/District/Create.cshtml
@@ -19,8 +19,8 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CityId" class="control-label"></label>
-                <select asp-for="CityId" class ="form-control" asp-items="ViewBag.City">
+                <label asp-for="City.Name" class="control-label">City</label>
+                <select asp-for="City.Name" class ="form-control" asp-items="ViewBag.CityName">
                     <option>Select a City</option>
                 </select>
             </div>
