--- a/TrafficGuard/Views/District/Edit.cshtml
+++ b/TrafficGuard/Views/District/Edit.cshtml
@@ -20,9 +20,11 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CityId" class="control-label"></label>
-                <select asp-for="CityId" class="form-control" asp-items="ViewBag.CityId"></select>
-                <span asp-validation-for="CityId" class="text-danger"></span>
+                <label asp-for="City.Name" class="control-label">City</label>
+                <select asp-for="City.Name" class="form-control" asp-items="ViewBag.CityName">
+                    <option>Select a City</option>
+                </select>
+                <span asp-validation-for="City.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
