--- a/TrafficGuard/Views/Accident/Index.cshtml
+++ b/TrafficGuard/Views/Accident/Index.cshtml
@@ -66,7 +66,7 @@
                 @Html.DisplayFor(modelItem => item.TrustWorthyRating)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Location.Id)
+                @Html.DisplayFor(modelItem => item.Location.Latitude) | @Html.DisplayFor(modelItem => item.Location.Longitude)
             </td>
             <td>
                 @*<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
