--- a/TrafficGuard/Views/Shared/_Layout.cshtml
+++ b/TrafficGuard/Views/Shared/_Layout.cshtml
@@ -22,6 +22,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="AccidentReport" asp-action="Create">Report</a>
+                        </li>
 
                         @{
                             if (this.User != default && this.User.Identity.IsAuthenticated)
