--- a/TrafficGuard/Views/Home/Index.cshtml
+++ b/TrafficGuard/Views/Home/Index.cshtml
@@ -1,8 +1,61 @@
-﻿@{
+﻿@using System.Text;
+@{
     ViewData["Title"] = "Home Page";
 }
+
+<style>
+    #map {
+        height: 700px;
+    }
+</style>
+
+<head>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+          integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
+          crossorigin=""/>
+
+    <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
+            integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
+            crossorigin=""></script>
+</head>
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <div id="map">
+        <script>
+            var map = L.map('map').setView([42.642, 25.252], 7.5);
+            L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            maxZoom: 19,
+            attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+            }).addTo(map);
+            
+            //var marker = L.marker([ 42 ,  52 ]).addTo(map);
+            //marker.bindPopup( "Hello" ).openPopup();
+
+            @{
+                string message;
+                string markers = "";
+                foreach (var item in ViewBag.Accidents)
+                {
+                    markers += $"var latlng = L.latLng({item.Location.Latitude}, {item.Location.Longitude}); ";
+                    markers += $"var marker = L.marker(latlng).addTo(map); ";
+                    markers += "marker.bindPopup(latlng.toString()).openPopup();";
+                }
+            }
+            @markers
+
+            var popup = L.popup();
+
+            function onMapClick(e) {
+                popup
+                    .setLatLng(e.latlng)
+                    .setContent("You clicked the map at " + e.latlng.toString())
+                    .openOn(map);
+            }
+
+            map.on('click', onMapClick);
+
+        </script>
+    </div>
 </div>
