--- a/TrafficGuard/Views/Home/Index.cshtml
+++ b/TrafficGuard/Views/Home/Index.cshtml
@@ -17,45 +17,30 @@
     <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
             integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
             crossorigin=""></script>
+    <!-- Load Esri Leaflet from CDN -->
+    <script src="https://unpkg.com/esri-leaflet@3.0.10/dist/esri-leaflet.js"></script>
+    <script src="https://unpkg.com/esri-leaflet-vector@4.0.0/dist/esri-leaflet-vector.js"></script>
+
+    <!-- Load Esri Leaflet Geocoder from CDN -->
+    <script src="https://unpkg.com/esri-leaflet-geocoder@3.1.3/dist/esri-leaflet-geocoder.js"></script>
 </head>
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
     <div id="map">
-        <script>
-            var map = L.map('map').setView([42.642, 25.252], 7.5);
-            L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
-            maxZoom: 19,
-            attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
-            }).addTo(map);
-            
-            //var marker = L.marker([ 42 ,  52 ]).addTo(map);
-            //marker.bindPopup( "Hello" ).openPopup();
-
-            @{
-                string message;
+        <script src="~/js/MapScript.js"></script>
+        @{
                 string markers = "";
                 foreach (var item in ViewBag.Accidents)
                 {
-                    markers += $"var latlng = L.latLng({item.Location.Latitude}, {item.Location.Longitude}); ";
-                    markers += $"var marker = L.marker(latlng).addTo(map); ";
-                    markers += "marker.bindPopup(latlng.toString()).openPopup();";
+                    markers += $"AddMarker({item.Location.Latitude}, {item.Location.Longitude}); ";
+                    //markers += $"marker.bindPopup( `Accident location - {item.Location.Latitude} | {item.Location.Longitude}` ).openPopup(); ";
                 }
-            }
-            @markers
-
-            var popup = L.popup();
-
-            function onMapClick(e) {
-                popup
-                    .setLatLng(e.latlng)
-                    .setContent("You clicked the map at " + e.latlng.toString())
-                    .openOn(map);
-            }
-
-            map.on('click', onMapClick);
-
-        </script>
+          }
+          <script>@markers</script>
+          <script>ReverseLocation()</script>
+        @*`\"hello\"` for string*@
+        
     </div>
 </div>
