test map on report

--- a/TrafficGuard/Views/Home/Index.cshtml
+++ b/TrafficGuard/Views/Home/Index.cshtml
@@ -39,7 +39,7 @@
                 }
           }
           <script>@markers</script>
-          <script>ReverseLocation()</script>
+         @* <script>ReverseLocation()</script> *@
         @*`\"hello\"` for string*@
         
     </div>
