--- a/TrafficGuard/Views/AccidentReport/Create.cshtml
+++ b/TrafficGuard/Views/AccidentReport/Create.cshtml
@@ -5,10 +5,31 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<style>
+    #map {
+        height: 400px;
+        width: 600px;
+    }
+</style>
+
 <head>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+          integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
+          crossorigin="" />
+
+    <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
+            integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
+            crossorigin=""></script>
+    <!-- Load Esri Leaflet from CDN -->
+    <script src="https://unpkg.com/esri-leaflet@3.0.10/dist/esri-leaflet.js"></script>
+    <script src="https://unpkg.com/esri-leaflet-vector@4.0.0/dist/esri-leaflet-vector.js"></script>
+
+    <!-- Load Esri Leaflet Geocoder from CDN -->
+    <script src="https://unpkg.com/esri-leaflet-geocoder@3.1.3/dist/esri-leaflet-geocoder.js"></script>
+
     @if (ViewBag.Error != null)
     {
-            <script>alert('@ViewBag.Error')</script>
+        <script>alert('@ViewBag.Error')</script>
     }
 </head>
 
@@ -62,6 +83,12 @@
                 <span>@TempData["msg"]</span>
             </div>
         </form>
+    </div>
+    <div class="col-md-5">
+        <div id="map">
+            <script src="~/js/MapScript.js"></script>
+            <script>ReverseLocation()</script>
+        </div>
     </div>
 </div>
 
