--- a/TrafficGuard/Views/AccidentReport/Create.cshtml
+++ b/TrafficGuard/Views/AccidentReport/Create.cshtml
@@ -67,15 +67,15 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             @*<div class="form-group">
-                <label asp-for="PathToFiles" class="control-label"></label>
-                <input asp-for="PathToFiles" class="form-control" />
-                <span asp-validation-for="PathToFiles" class="text-danger"></span>
+            <label asp-for="PathToFiles" class="control-label"></label>
+            <input asp-for="PathToFiles" class="form-control" />
+            <span asp-validation-for="PathToFiles" class="text-danger"></span>
             </div>*@
-            @*<div class="form-group">
-                <label asp-for="TrustWorthyRating" class="control-label"></label>
-                <input asp-for="TrustWorthyRating" class="form-control" />
-                <span asp-validation-for="TrustWorthyRating" class="text-danger"></span>
-            </div>*@
+            <div class="form-group">
+            @*<label asp-for="Json" class="control-label"></label>*@
+            <input asp-for="Json" type="hidden" class="form-control" />
+            @*<span asp-validation-for="TrustWorthyRating" class="text-danger"></span>*@
+            </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
@@ -87,7 +87,40 @@
     <div class="col-md-5">
         <div id="map">
             <script src="~/js/MapScript.js"></script>
-            <script>ReverseLocation()</script>
+            <script>
+                const layerGroup = L.layerGroup().addTo(map);
+
+                map.on("click", function (e) {
+
+                    L.esri.Geocoding
+                        .reverseGeocode({
+                            apikey: apiKey
+                        })
+                        .latlng(e.latlng)
+                        .language("eng")
+
+                        .run(function (error, result) {
+                            if (error) {
+                                return;
+                            }
+
+                            layerGroup.clearLayers();
+                            marker = L.marker(result.latlng).addTo(layerGroup);
+
+                            const latLngString = `${Math.round(result.latlng.lat * 100000) / 100000}, ${Math.round(result.latlng.lng * 100000) / 100000}`;
+
+                            marker.bindPopup(`<b>${latLngString}</b><p>${result.address.Match_addr}</p>`);
+                            marker.openPopup();
+
+                            var latLng = latLngString.split(", ");
+                            document.getElementById("Latitude").value = latLng[0];
+                            document.getElementById("Longitude").value = latLng[1];
+
+                            document.getElementById("Json").value = JSON.stringify(result);
+                            console.log(document.getElementById("Json").value);
+                        });
+                });
+            </script>
         </div>
     </div>
 </div>
