--- a/TrafficGuard/Views/Accident/Details.cshtml
+++ b/TrafficGuard/Views/Accident/Details.cshtml
@@ -5,13 +5,41 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<style>
+    #map {
+        height: 400px;
+        width: 600px;
+    }
+</style>
+
+<head>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+          integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
+          crossorigin="" />
+
+    <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
+            integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
+            crossorigin=""></script>
+    <!-- Load Esri Leaflet from CDN -->
+    <script src="https://unpkg.com/esri-leaflet@3.0.10/dist/esri-leaflet.js"></script>
+    <script src="https://unpkg.com/esri-leaflet-vector@4.0.0/dist/esri-leaflet-vector.js"></script>
+
+    <!-- Load Esri Leaflet Geocoder from CDN -->
+    <script src="https://unpkg.com/esri-leaflet-geocoder@3.1.3/dist/esri-leaflet-geocoder.js"></script>
+
+    @if (ViewBag.Error != null)
+    {
+        <script>alert('@ViewBag.Error')</script>
+    }
+</head>
+
 <h1>Details</h1>
 
 <div>
     <h4>Accident</h4>
     <hr />
     <dl class="row">
-        <div>
+        <div class="col-md-4">
 
             <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.DateTime)
@@ -31,12 +59,12 @@
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Description)
             </dd>
-            <dt class="col-sm-2">
+            @*<dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.PathToFiles)
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.PathToFiles)
-            </dd>
+            </dd>*@
             <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.TrustWorthyRating)
             </dt>
@@ -49,7 +77,25 @@
             <dd class="col-sm-10">
                 @Html.DisplayFor(modelItem => modelItem.Location.Latitude) | @Html.DisplayFor(modelItem => modelItem.Location.Longitude)
             </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Location.District)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Location.District.Name)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Location.District.City)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Location.District.City.Name)
+            </dd>
 
+        </div>
+        <div class="col-md-5">
+            <div id="map">
+                <script src="~/js/MapScript.js"></script>
+                <script>AddMarker(@Model.Location.Latitude, @Model.Location.Longitude);</script>
+            </div>
         </div>
     </dl>
 </div>
