--- a/TrafficGuard/Views/Home/Index.cshtml
+++ b/TrafficGuard/Views/Home/Index.cshtml
@@ -27,14 +27,14 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    @*<p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>*@
     <div id="map">
         <script src="~/js/MapScript.js"></script>
         @{
                 string markers = "";
                 foreach (var item in ViewBag.Accidents)
                 {
-                    markers += $"AddMarker({item.Location.Latitude}, {item.Location.Longitude}); ";
+                    markers += $"AddMarker({item.Location.Latitude}, {item.Location.Longitude}, {item.Id}); ";
                     //markers += $"marker.bindPopup( `Accident location - {item.Location.Latitude} | {item.Location.Longitude}` ).openPopup(); ";
                 }
           }
