--- a/TrafficGuard/Views/Accident/Details.cshtml
+++ b/TrafficGuard/Views/Accident/Details.cshtml
@@ -48,7 +48,7 @@
                 @Html.DisplayFor(model => model.DateTime)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.NumVehicles)
+                @*@Html.DisplayNameFor(model => model.NumVehicles)*@Number of Vehicles
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.NumVehicles)
