--- a/TrafficGuard/Views/Shared/_Layout.cshtml
+++ b/TrafficGuard/Views/Shared/_Layout.cshtml
@@ -84,9 +84,9 @@
                         </li>*@
 
 
-                        <li class="nav-item">
+                        @*<li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
+                        </li>*@
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
@@ -101,7 +101,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container" style="color:white;">
-            &copy; 2023 - TrafficGuard - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2023 - TrafficGuard @*- <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>*@
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
