--- a/TrafficGuard/Views/AccidentReport/Create.cshtml
+++ b/TrafficGuard/Views/AccidentReport/Create.cshtml
@@ -118,7 +118,7 @@
                             document.getElementById("Longitude").value = latLng[1];
 
                             document.getElementById("Json").value = JSON.stringify(result);
-                            console.log(document.getElementById("Json").value);
+                            //console.log(document.getElementById("Json").value);
                         });
                 });
             </script>
@@ -159,7 +159,7 @@
                             document.getElementById("Longitude").value = latLng[1];
 
                             document.getElementById("Json").value = JSON.stringify(result);
-                            console.log(document.getElementById("Json").value);
+                            //console.log(document.getElementById("Json").value);
                         });
                 }
             </script>
