--- a/TrafficGuard/Views/Accident/Delete.cshtml
+++ b/TrafficGuard/Views/Accident/Delete.cshtml
@@ -11,7 +11,7 @@
 <div>
     <h4>Accident</h4>
     <hr />
-    <dl class="row">
+    <dl class="row" style="background: rgba(255, 255, 255, 0.5)">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.DateTime)
         </dt>
