--- a/TrafficGuard/Views/Accident/Index.cshtml
+++ b/TrafficGuard/Views/Accident/Index.cshtml
@@ -23,7 +23,7 @@
 
 <partial name="_pager" model="@pager" />
 
-<table class="table">
+<table class="table" style="background: rgba(255, 255, 255, 0.5)">
     <thead>
         <tr>
             <th>
@@ -72,7 +72,7 @@
                 @*<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>*@
-                <div class="btn-group">
+                    <div class="btn-group" style="background-color: none">
                     <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-info">Edit</a>
                     <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-primary ml-1">Details</a>
                     <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-danger ml-1">Delete</a>
