--- a/TrafficGuard/Views/City/Create.cshtml
+++ b/TrafficGuard/Views/City/Create.cshtml
@@ -22,10 +22,11 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
+                <input asp-for="Name" class="form-control" style="border:none;" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <p></p>
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
