--- a/TrafficGuard/Views/City/Details.cshtml
+++ b/TrafficGuard/Views/City/Details.cshtml
@@ -5,12 +5,12 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>View</h1>
+<h1>Details</h1>
 
 <div>
     <h4>City</h4>
     <hr />
-    <dl class="row">
+    <dl class="row" style="background: rgba(255, 255, 255, 0.5)">
         <div>
             <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.Name)
