--- a/TrafficGuard/Views/City/Edit.cshtml
+++ b/TrafficGuard/Views/City/Edit.cshtml
@@ -16,10 +16,11 @@
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
+                <input asp-for="Name" class="form-control" style="border:none;" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <p></p>
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
