--- a/TrafficGuard/Views/Location/Details.cshtml
+++ b/TrafficGuard/Views/Location/Details.cshtml
@@ -10,7 +10,7 @@
 <div>
     <h4>Location</h4>
     <hr />
-    <dl class="row">
+    <dl class="row" style="background: rgba(255, 255, 255, 0.5)">
         <div>
 
             <dt class = "col-sm-2">
