--- a/TrafficGuard/Views/Location/Edit.cshtml
+++ b/TrafficGuard/Views/Location/Edit.cshtml
@@ -16,22 +16,23 @@
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Latitude" class="control-label"></label>
-                <input asp-for="Latitude" class="form-control" />
+                <input asp-for="Latitude" class="form-control" style="border:none;" />
                 <span asp-validation-for="Latitude" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Longitude" class="control-label"></label>
-                <input asp-for="Longitude" class="form-control" />
+                <input asp-for="Longitude" class="form-control" style="border:none;" />
                 <span asp-validation-for="Longitude" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="District.Name" class="control-label">District</label>
-                <select asp-for="District.Name" class="form-control" asp-items="ViewBag.DistrictName">
+                <select asp-for="District.Name" class="form-control" asp-items="ViewBag.DistrictName" style="border:none;">
                     @*<option>Select a District</option>*@
                 </select>
                 <span asp-validation-for="District.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <p></p>
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
