--- a/TrafficGuard/Views/Location/Index.cshtml
+++ b/TrafficGuard/Views/Location/Index.cshtml
@@ -23,7 +23,7 @@
 
 <partial name="_pager" model="@pager" />
 
-<table class="table">
+<table class="table" style="background: rgba(255, 255, 255, 0.5)">
     <thead>
         <tr>
             <th>
