--- a/TrafficGuard/Views/Accident/Create.cshtml
+++ b/TrafficGuard/Views/Accident/Create.cshtml
@@ -60,7 +60,8 @@
 </div>
 
 <div>
-    <a asp-action="Index" style="color: white">Back to List</a>
+    <h6></h6>
+    <a asp-action="Index" class="btn btn-secondary">Back to List</a>
 </div>
 
 @section Scripts {
