--- a/TrafficGuard/Views/AccidentReport/Create.cshtml
+++ b/TrafficGuard/Views/AccidentReport/Create.cshtml
@@ -26,12 +26,22 @@
 
     <!-- Load Esri Leaflet Geocoder from CDN -->
     <script src="https://unpkg.com/esri-leaflet-geocoder@3.1.3/dist/esri-leaflet-geocoder.js"></script>
-
-    @if (ViewBag.Error != null)
-    {
-        <script>alert('@ViewBag.Error')</script>
-    }
 </head>
+
+@if ((bool)TempData["success"]!)
+{
+    <div class="alert alert-success alert-dismissible">
+        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+        <strong>Success!</strong> Accident reported!
+    </div>
+}
+else if (!String.IsNullOrWhiteSpace((string)TempData["error"]!))
+{
+    <div class="alert alert-danger alert-dismissible">
+        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+        <strong>Error!</strong> @TempData["error"]
+    </div>
+}
 
 <h1>Report</h1>
 
@@ -79,9 +89,6 @@
             <div class="form-group">
                 <p></p>
                 <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-            <div class="form-group">
-                <span>@TempData["msg"]</span>
             </div>
         </form>
     </div>
