--- a/TrafficGuard/Views/Location/Create.cshtml
+++ b/TrafficGuard/Views/Location/Create.cshtml
@@ -45,7 +45,8 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <h6></h6>
+    <a asp-action="Index" class="btn btn-secondary">Back to List</a>
 </div>
 
 @section Scripts {
