--- a/TrafficGuard/Views/AccidentReport/Create.cshtml
+++ b/TrafficGuard/Views/AccidentReport/Create.cshtml
@@ -53,12 +53,12 @@ else if (!String.IsNullOrWhiteSpace((string)TempData["error"]!))
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Latitude" class="control-label"></label>
-                <input asp-for="Latitude" class="form-control" style="border:none;" />
+                <input asp-for="Latitude" class="form-control" style="border:none;" disabled />
                 <span asp-validation-for="Latitude" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Longitude" class="control-label"></label>
-                <input asp-for="Longitude" class="form-control" style="border:none;" />
+                <input asp-for="Longitude" class="form-control" style="border:none;" disabled />
                 <span asp-validation-for="Longitude" class="text-danger"></span>
             </div>
             <div class="form-group">
