--- a/TrafficGuard/Views/AccidentReport/Create.cshtml
+++ b/TrafficGuard/Views/AccidentReport/Create.cshtml
@@ -53,12 +53,12 @@ else if (!String.IsNullOrWhiteSpace((string)TempData["error"]!))
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Latitude" class="control-label"></label>
-                <input asp-for="Latitude" class="form-control" style="border:none;" disabled />
+                <input asp-for="Latitude" class="form-control" style="border:none;" readonly />
                 <span asp-validation-for="Latitude" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Longitude" class="control-label"></label>
-                <input asp-for="Longitude" class="form-control" style="border:none;" disabled />
+                <input asp-for="Longitude" class="form-control" style="border:none;" readonly />
                 <span asp-validation-for="Longitude" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -125,7 +125,7 @@ else if (!String.IsNullOrWhiteSpace((string)TempData["error"]!))
                             document.getElementById("Longitude").value = latLng[1];
 
                             document.getElementById("Json").value = JSON.stringify(result);
-                            //console.log(document.getElementById("Json").value);
+                            console.log(document.getElementById("Json").value);
                         });
                 });
             </script>
@@ -166,7 +166,7 @@ else if (!String.IsNullOrWhiteSpace((string)TempData["error"]!))
                             document.getElementById("Longitude").value = latLng[1];
 
                             document.getElementById("Json").value = JSON.stringify(result);
-                            //console.log(document.getElementById("Json").value);
+                            console.log(document.getElementById("Json").value);
                         });
                 }
             </script>
